--- a/src/test/test_data/test_esgi_RNA/esgi_example_RNA.ini
+++ b/src/test/test_data/test_esgi_RNA/esgi_example_RNA.ini
@@ -56,6 +56,7 @@ fastqReadBucketSize=500000
 #filter to remove 'false' reads. It is a percentage x given as a value from [0-1[ 
 #reads are only retained if >x percent of reads with the SAME UMI have the SAME FEATURE-BARCODE and SINGLE-CELL ID
 umiThreshold=0.0
+umiAbundance=0.0
 umiCollapsing=1
 SC_ID_string=0
 # a file of barcodes that should be mapped to other barcodes, for more details look into the tool count
